package com.ucms.assessment;

public enum AssessmentType {
    FINAL_EXAM,
    TEST,
    ASSIGNMENT
}